[WED-3] Fix vertical align and wide screens panels

--- a/engines/spree_wedding_atelier/app/assets/stylesheets/base/_mixins.scss
+++ b/engines/spree_wedding_atelier/app/assets/stylesheets/base/_mixins.scss
@@ -27,3 +27,8 @@
     src: $src;
   }
 }
+
+.table-cell-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
